# triton-csprng

./: LICENSE  README.md  pyproject.toml
.github/workflows/: build-and-publish-pypi.yaml
tests/: test_chacha20.py  test_rns.py  test_sampling.py  test_stream.py
triton_csprng/: __init__.py  chacha20.py  rns.py  sampling.py  stream.py
