[project]
name = "triton-csprng"
version = "0.1.1"
description = "Triton-backed ChaCha20 CSPRNG and GPU sampling primitives for PyTorch/FHE workloads"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "VisualDust", email = "gavin@gong.host" },
]
maintainers = [
    { name = "VisualDust", email = "gavin@gong.host" },
]
keywords = [
    "chacha20",
    "ckks",
    "cryptography",
    "csprng",
    "cuda",
    "fhe",
    "pytorch",
    "random-sampling",
    "triton",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mpmath>=1.3",
    "torch>=2.6",
    "triton>=3.0",
]

[project.urls]
Homepage = "https://github.com/visualDust/triton-csprng"
Documentation = "https://github.com/visualDust/triton-csprng#readme"
Repository = "https://github.com/visualDust/triton-csprng"
Issues = "https://github.com/visualDust/triton-csprng/issues"

[project.optional-dependencies]
dev = ["pre-commit>=4.0", "pytest>=8.0", "ruff>=0.11"]

[dependency-groups]
dev = ["pre-commit>=4.0", "pytest>=8.0", "ruff>=0.11"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.format]
quote-style = "preserve"
